Search places SOP

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ function numberWithCommas(x) {
 }
 
 function displayMatch(){
+    // Use arrow
     const value = this.value;
     const matches = findMatches(value,cities)
 
