Search places SOP

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function numberWithCommas(x) {
 }
 
 function displayMatch(){
-    // Use arrow
+    // Use arrow function like displaymatch = () => {} ---> but in that this.value returned 'undefined'
     const value = this.value;
     const matches = findMatches(value,cities)
 
